Fix overflowing img in IE

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -735,7 +735,7 @@
 						}
 						.images-wrapper.showdetail {
 							overflow: visible;
-							max-height: initial;
+							max-height: none;
 							img {
 								width: 100%;
 								height: auto;
